--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,7 @@
                                 <button type="button" class="btn-close btn-close-white" data-mdb-dismiss="toast"
                                     aria-label="Close"></button>
                             </div>
-                            <div class="toast-body text-white">You're viewing my work-history.</div>
+                            <div class="toast-body text-white">You're viewing my working-history.</div>
                         </div>
                         <!-- TOAST FOR WORK__BTN END   -->
                     </div>
