--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,7 @@
                         <div class="col-6 col-md-6">
                             <div class="qualification__grid position-relative wow fadeInDown" data-wow-duration="1s"
                                 data-wow-delay="0.9s" style="display:none;" id="work__block__4">
-                                <h5>Java Developer</h5>
+                                <h5>Java Core Developer</h5>
                                 <p class="text-muted">Montreal Inc.</p>
                                 <i class="uil uil-calendar-alt"></i><span style="color: var(--primaryColor);">Fall 2030
                                     - Summer 2032</span>
