--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <div class="container-fluid">
                     <div class="navbar-logo">
                         <a class="navbar-brand wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s"
-                            id="navbar-brand" href="#">Zayed<span class="dot" id="dot">.</span></a>
+                            id="navbar-brand" href="https://zayed-mohammed-uddin.github.io/My-Portfolio/">Zayed<span class="dot" id="dot">.</span></a>
                     </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
