--- a/index.html
+++ b/index.html
@@ -1610,7 +1610,7 @@
                                     <div class="project__demo wow fadeInLeft" data-wow-duration="1s"
                                         data-wow-delay="1.1s">
                                         <button class="btn btn-lg btn__demo btn-outline-primary py-3">
-                                            <a href="https://zayed-mohammed-uddin.github.io/Portfolio/"
+                                            <a href="https://zayed-mohammed-uddin.github.io/Responsive-Personal-CV-Template/"
                                                 target="_blank">Demo
                                                 <i class="uil uil-arrow-right ms-1"></i></a>
                                         </button>
