--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <!-- LOGO -->
     <link rel="shortcut icon" href="./Logos/zmu.png" type="image/x-icon">
 
-    <!-- BOOTSTRAP CSS -->
+    <!-- BOOTSTRAP -->
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 
-    <!-- Particle CSS -->
+    <!-- Particle -->
     <link rel="stylesheet" href="./Assets/Responsive Particles BG/particle.css">
 
-    <!-- MDB -->
-    <link href="Assets/MDB 5 Pro v3.9/css/mdb.min.css" rel="stylesheet" />
+    <!-- design-minified-xxx -->
+    <link href="./design-minified-xxx.min.css" rel="stylesheet" />
 
-    <!-- fakeloader css -->
+    <!-- fakeloader -->
     <link rel="stylesheet" href="./Assets/fakeLoader.js-2.0.0/dist/fakeLoader.min.css">
 
     <!-- Modal Effect -->
@@ -40,18 +40,18 @@
     <!-- UNICONS -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
 
-    <!-- Swiper CSS -->
+    <!-- Swiper -->
     <link rel="stylesheet" href="./Assets/Swiper Slider/swiper-bundle.css" />
     <link rel="stylesheet" href="./Assets/Swiper Slider/swiper-bundle.min.css" />
 
-    <!-- Animate CSS -->
+    <!-- Animate -->
     <link rel="stylesheet" href="./Assets/animate.min.css" />
     <link rel="stylesheet" href="./Assets/WOW-master/css/libs/animate.css" />
 
-    <!-- Jarallax CSS -->
+    <!-- Jarallax -->
     <link rel="stylesheet" href="./Assets/jarallax-1.12.7/dist/jarallax.css">
 
-    <!-- STYLE CSS -->
+    <!-- STYLE -->
     <link rel="stylesheet" type="text/css" href="./style.css">
 
     <style>
@@ -2251,8 +2251,8 @@
         integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous">
     </script>
 
-    <!-- MDB -->
-    <script type="text/javascript" src="./Assets/MDB 5 Pro v3.9/js/mdb.min.js"></script>
+    <!-- design-minified-xxx -->
+    <script type="text/javascript" src="./design-minified-xxx.min.js"></script>
 
     <!-- jQUERY -->
     <script src="./Assets/jQuery/jquery-3.6.0.min.js"></script>
@@ -2264,10 +2264,10 @@
     <script src="./Assets/ModalWindowEffects-master/js/cssParser.js"></script>
     <script src="./Assets/ModalWindowEffects-master/js/modernizr.custom.js"></script>
 
-    <!-- fakeloader js -->
+    <!-- fakeloader -->
     <script src="./Assets/fakeLoader.js-2.0.0/dist/fakeLoader.min.js"></script>
 
-    <!-- COUNTER JS -->
+    <!-- COUNTER -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"
         integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -2281,32 +2281,32 @@
     <!-- jQuery Nice Scrolling Effect -->
     <script src="./Assets/jquery.nicescroll-master/jquery.nicescroll.js"></script>
 
-    <!-- TypeWriter JS -->
+    <!-- TypeWriter -->
     <script src="./Assets/typewriter.js"></script>
 
     <!-- FONT AWESOME ICONS -->
     <script src="https://kit.fontawesome.com/e067279608.js" crossorigin="anonymous"></script>
 
-    <!-- Particle JS -->
+    <!-- Particle -->
     <!-- <script src="./Assets/Responsive Particles BG/particle.js"></script> -->
 
-    <!-- SWIPER JS -->
+    <!-- SWIPER -->
     <script src="./Assets/Swiper Slider/swiper-bundle.js"></script>
     <script src="./Assets/Swiper Slider/swiper-bundle.min.js"></script>
 
-    <!-- OWL JS -->
+    <!-- OWL -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
-    <!-- MAIN JS -->
+    <!-- MAIN -->
     <script type="text/javascript" src="./index.js"></script>
 
-    <!-- WOW JS -->
+    <!-- WOW -->
     <script src="./Assets/WOW-master/dist/wow.min.js"></script>
 
-    <!-- NightMode JS -->
+    <!-- NightMode -->
     <script src="./Assets/night-mode.js"></script>
 
-    <!-- Jarallax JS -->
+    <!-- Jarallax -->
     <script src="./Assets/jarallax-1.12.7/dist/jarallax.js"></script>
     <script src="./Assets/jarallax-1.12.7/dist/jarallax-video.js"></script>
     <script src="./Assets/jarallax-1.12.7/dist/jarallax-element.js"></script>
