--- a/index.html
+++ b/index.html
@@ -631,6 +631,10 @@
                             <div class="modal-body">
                                 <div class="course__certificate">
                                     <div class="col-md-12 mb-4">
+                                        <img class="img-fluid rounded" src="./Education & Course Certificate/DET.jpg"
+                                            alt="tense">
+                                    </div>
+                                    <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded" src="./Education & Course Certificate/tense.jpg"
                                             alt="tense">
                                     </div>
