--- a/index.html
+++ b/index.html
@@ -502,31 +502,31 @@
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded"
                                             src="./Education & Course Certificate/Final Report Card Of Grade 9.jpg"
-                                            alt="9">
+                                            alt="9" title="Final Report Card Of Grade 9">
                                     </div>
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded"
                                             src="./Education & Course Certificate/Final Report Card Of Grade 10.jpg"
-                                            alt="10">
+                                            alt="10" title="Final Report Card Of Grade 10">
                                     </div>
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded"
                                             src="./Education & Course Certificate/SSC Official Academic Transcript.jpg"
-                                            alt="ssc">
+                                            alt="ssc" title="SSC Official Academic Transcript">
                                     </div>
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded"
                                             src="./Education & Course Certificate/SSC Official Certificate.jpg"
-                                            alt="cert">
+                                            alt="cert" title="SSC Official Certificate">
                                     </div>
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded"
-                                            src="./Education & Course Certificate/Recommendation Letter.jpg" alt="LOR">
+                                            src="./Education & Course Certificate/Recommendation Letter.jpg" alt="LOR" title="Recommendation Letter">
                                     </div>
                                     <div class="col-md-12">
                                         <img class="img-fluid rounded"
                                             src="./Education & Course Certificate/Year Final Official Transcript.jpg"
-                                            alt="11">
+                                            alt="11" title="Year Final Official Transcript title="Completed HTML Course"">
                                     </div>
                                 </div>
                             </div>
@@ -589,11 +589,11 @@
                                 <div class="course__certificate">
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded" src="./Education & Course Certificate/C.jpg"
-                                            alt="c">
+                                            alt="c" title="Completed C Course">
                                     </div>
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded" src="./Education & Course Certificate/C++.png"
-                                            alt="c++">
+                                            alt="c++" title="Completed C++ Course">
                                     </div>
                                 </div>
                             </div>
@@ -632,28 +632,28 @@
                                 <div class="course__certificate">
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded" src="./Education & Course Certificate/DET.jpg"
-                                            alt="tense">
+                                            alt="det" title="Duolingo English Test Score IELTS Equivalent 8">
                                     </div>
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded" src="./Education & Course Certificate/tense.jpg"
-                                            alt="tense">
+                                            alt="tense" title="Present & Perfect Tenses">
                                     </div>
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded" src="./Education & Course Certificate/adj.jpg"
-                                            alt="adj">
+                                            alt="adj" title="Adjectives & Modals">
                                     </div>
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded" src="./Education & Course Certificate/tricky.jpg"
-                                            alt="tricky">
+                                            alt="tricky" title="Tricky English Grammar">
                                     </div>
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded" src="./Education & Course Certificate/toefl.jpg"
-                                            alt="toefl">
+                                            alt="toefl" title="TOEFL Reading English Mastery">
                                     </div>
                                     <div class="col-md-12">
                                         <img class="img-fluid rounded"
                                             src="./Education & Course Certificate/tricky accent.jpg"
-                                            alt="tricky accent">
+                                            alt="tricky accent" title="Tricky American English Accent">
                                     </div>
                                 </div>
                             </div>
@@ -693,15 +693,15 @@
                                 <div class="course__certificate">
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded" src="./Education & Course Certificate/html.jpg"
-                                            alt="html">
+                                            alt="html" title="Completed HTML Course">
                                     </div>
                                     <div class="col-md-12 mb-4">
                                         <img class="img-fluid rounded" src="./Education & Course Certificate/css.jpg"
-                                            alt="css">
+                                            alt="css" title="Completed CSS Course">
                                     </div>
                                     <div class="col-md-12">
                                         <img class="img-fluid rounded"
-                                            src="./Education & Course Certificate/responsive.jpg" alt="responsive">
+                                            src="./Education & Course Certificate/responsive.jpg" alt="responsive" title="Completed Responsive Design Course">
                                     </div>
                                 </div>
                             </div>
