--- a/index.html
+++ b/index.html
@@ -811,14 +811,14 @@
                                                             <span>JavaScript</span>
                                                         </div>
                                                         <div class="progress__no">
-                                                            <span class="text-muted">60%</span>
+                                                            <span class="text-muted">40%</span>
                                                         </div>
                                                     </div>
                                                     <div class="progress mb-4"
                                                         style="height: 5px;border-radius:0.25rem;">
                                                         <div class="progress-bar" role="progressbar"
-                                                            style="width: 60%; background-color: var(--primaryColor);"
-                                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                                            style="width: 40%; background-color: var(--primaryColor);"
+                                                            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -829,13 +829,13 @@
                                                             <span>React</span>
                                                         </div>
                                                         <div class="progress__no">
-                                                            <span class="text-muted">35%</span>
+                                                            <span class="text-muted">25%</span>
                                                         </div>
                                                     </div>
                                                     <div class="progress" style="height: 5px;border-radius:0.25rem;">
                                                         <div class="progress-bar" role="progressbar"
-                                                            style="width: 35%; background-color: var(--primaryColor);"
-                                                            aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">
+                                                            style="width: 25%; background-color: var(--primaryColor);"
+                                                            aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -859,7 +859,7 @@
                                                 </div>
                                                 <div class="skills__info">
                                                     <p class="mb-2">Back-End Developer</p>
-                                                    <p class="text-muted">More than 02+ months</p>
+                                                    <p class="text-muted">More than 01+ months</p>
                                                 </div>
                                             </div>
                                         </button>
@@ -876,14 +876,14 @@
                                                                 <span>PHP</span>
                                                             </div>
                                                             <div class="progress__no">
-                                                                <span class="text-muted">60%</span>
+                                                                <span class="text-muted">10%</span>
                                                             </div>
                                                         </div>
                                                         <div class="progress mb-4"
                                                             style="height: 5px;border-radius:0.25rem;">
                                                             <div class="progress-bar" role="progressbar"
-                                                                style="width: 60%; background-color: var(--primaryColor);"
-                                                                aria-valuenow="60" aria-valuemin="0"
+                                                                style="width: 10%; background-color: var(--primaryColor);"
+                                                                aria-valuenow="10" aria-valuemin="0"
                                                                 aria-valuemax="100">
                                                             </div>
                                                         </div>
@@ -895,14 +895,14 @@
                                                                 <span>NodeJS</span>
                                                             </div>
                                                             <div class="progress__no">
-                                                                <span class="text-muted">50%</span>
+                                                                <span class="text-muted">5%</span>
                                                             </div>
                                                         </div>
                                                         <div class="progress mb-4"
                                                             style="height: 5px;border-radius:0.25rem;">
                                                             <div class="progress-bar" role="progressbar"
-                                                                style="width: 50%; background-color: var(--primaryColor);"
-                                                                aria-valuenow="50" aria-valuemin="0"
+                                                                style="width: 5%; background-color: var(--primaryColor);"
+                                                                aria-valuenow="5" aria-valuemin="0"
                                                                 aria-valuemax="100">
                                                             </div>
                                                         </div>
@@ -914,14 +914,14 @@
                                                                 <span>Django</span>
                                                             </div>
                                                             <div class="progress__no">
-                                                                <span class="text-muted">45%</span>
+                                                                <span class="text-muted">5%</span>
                                                             </div>
                                                         </div>
                                                         <div class="progress mb-4"
                                                             style="height: 5px;border-radius:0.25rem;">
                                                             <div class="progress-bar" role="progressbar"
-                                                                style="width: 45%; background-color: var(--primaryColor);"
-                                                                aria-valuenow="45" aria-valuemin="0"
+                                                                style="width: 5%; background-color: var(--primaryColor);"
+                                                                aria-valuenow="5" aria-valuemin="0"
                                                                 aria-valuemax="100">
                                                             </div>
                                                         </div>
@@ -986,14 +986,14 @@
                                                             <span>C</span>
                                                         </div>
                                                         <div class="progress__no">
-                                                            <span class="text-muted">65%</span>
+                                                            <span class="text-muted">45%</span>
                                                         </div>
                                                     </div>
                                                     <div class="progress mb-4"
                                                         style="height: 5px;border-radius:0.25rem;">
                                                         <div class="progress-bar" role="progressbar"
-                                                            style="width: 65%; background-color: var(--primaryColor);"
-                                                            aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
+                                                            style="width: 45%; background-color: var(--primaryColor);"
+                                                            aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -1004,14 +1004,14 @@
                                                             <span>C++</span>
                                                         </div>
                                                         <div class="progress__no">
-                                                            <span class="text-muted">60%</span>
+                                                            <span class="text-muted">40%</span>
                                                         </div>
                                                     </div>
                                                     <div class="progress mb-4"
                                                         style="height: 5px;border-radius:0.25rem;">
                                                         <div class="progress-bar" role="progressbar"
-                                                            style="width: 60%; background-color: var(--primaryColor);"
-                                                            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                                            style="width: 40%; background-color: var(--primaryColor);"
+                                                            aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -1087,14 +1087,14 @@
                                                                 <span>Figma</span>
                                                             </div>
                                                             <div class="progress__no">
-                                                                <span class="text-muted">60%</span>
+                                                                <span class="text-muted">50%</span>
                                                             </div>
                                                         </div>
                                                         <div class="progress mb-4"
                                                             style="height: 5px;border-radius:0.25rem;">
                                                             <div class="progress-bar" role="progressbar"
-                                                                style="width: 60%; background-color: var(--primaryColor);"
-                                                                aria-valuenow="60" aria-valuemin="0"
+                                                                style="width: 50%; background-color: var(--primaryColor);"
+                                                                aria-valuenow="50" aria-valuemin="0"
                                                                 aria-valuemax="100">
                                                             </div>
                                                         </div>
@@ -1106,14 +1106,14 @@
                                                                 <span>Sketch</span>
                                                             </div>
                                                             <div class="progress__no">
-                                                                <span class="text-muted">50%</span>
+                                                                <span class="text-muted">40%</span>
                                                             </div>
                                                         </div>
                                                         <div class="progress mb-4"
                                                             style="height: 5px;border-radius:0.25rem;">
                                                             <div class="progress-bar" role="progressbar"
-                                                                style="width: 50%; background-color: var(--primaryColor);"
-                                                                aria-valuenow="50" aria-valuemin="0"
+                                                                style="width: 40%; background-color: var(--primaryColor);"
+                                                                aria-valuenow="40" aria-valuemin="0"
                                                                 aria-valuemax="100">
                                                             </div>
                                                         </div>
@@ -1230,10 +1230,10 @@
                         <div class="col-6 col-md-6">
                             <div class="qualification__grid position-relative wow animated fadeInDown" data-wow-duration="1s"
                                 data-wow-delay="1.1s" id="ed__block__1">
-                                <h5>Junior IT Specialist</h5>
-                                <p class="text-muted">University Of Maryland, Baltimore</p>
+                                <h5>Freshman Majoring CS</h5>
+                                <p class="text-muted">Coppin State University, Baltimore</p>
                                 <i class="uil uil-calendar-alt"></i><span style="color: var(--primaryColor);">Fall 2022
-                                    - Spring 2022</span>
+                                    - Spring 2026</span>
                             </div>
                         </div>
                         <div class="col-6 col-md-6">
@@ -2026,11 +2026,11 @@
                                         <i class="uil uil-phone"></i>
                                     </div>
                                     <div class="contact__block__content" style="cursor: pointer;">
-                                        <h5>Call Me</h5>
+                                        <h5>Text Me</h5>
                                         <h6 data-bs-toggle="tooltip" data-bs-placement="top" data-bs-html="true"
                                             title="<b>Click To Redirect</b>">
                                             <a href="tel:+999-777-888" class="text-decoration-none text-muted">
-                                                999-777-888
+                                                +1-443-542-8561
                                             </a>
                                         </h6>
                                     </div>
@@ -2060,7 +2060,7 @@
                                             title="<b>Click To Redirect</b>">
                                             <a href="https://cutt.ly/VWL1Fjm" target="_blank"
                                                 class="text-decoration-none text-muted">
-                                                @Zayed Zxr
+                                                @Zayed Mohammed Uddin
                                             </a>
                                         </h6>
                                     </div>
@@ -2102,7 +2102,7 @@
                                         data-mdb-target="#maps__modal" style="cursor: pointer;">
                                         <h5>Find Me</h5>
                                         <h6 class="text-muted" data-bs-toggle="tooltip" data-bs-placement="top"
-                                            data-bs-html="true" title="<b>Click To Redirect</b>">1349 Weatherstone
+                                            data-bs-html="true" title="<b>Click To Redirect</b>">2749 Weatherstone
                                             Drive, Ellicott City,
                                             Baltimore, MD, US
                                         </h6>
